--- a/src/lib/components/number/style.module.css
+++ b/src/lib/components/number/style.module.css
@@ -115,7 +115,9 @@
 	composes: paper;
 
 	place-items: center;
+	place-content: center;
 	background-color: var(--color-surface-300);
 	font-size: var(--font-size-5);
 	color: var(--color-gray-800);		
+	width: 2em;
 }
