feat(styles): aligned and responsive numbers layout

--- a/src/lib/components/number/style.module.css
+++ b/src/lib/components/number/style.module.css
@@ -13,7 +13,7 @@
 	overflow-x: auto;
 	scroll-padding-left: 5em;
 	scroll-snap-type: x mandatory;
-	justify-self: center;
+	justify-self: end;
 }
 
 .numbers li > div {
