--- a/src/lib/components/number/style.module.css
+++ b/src/lib/components/number/style.module.css
@@ -11,7 +11,6 @@
 	max-width: 100%;
 	display: flex;
 	overflow-x: auto;
-	scroll-padding-left: 5em;
 	scroll-snap-type: x mandatory;
 	justify-self: end;
 }
@@ -34,7 +33,22 @@
 
 .number > section[label="radix"] {
 	position: sticky;
-	right: 0.5rem;
+	right: var(--space-m);
+}
+
+.number > section[label="ranks"] {
+	position: relative;
+}
+
+.number > section[label="ranks"]::after {
+	content: "";
+	position: absolute;
+	left: 0;
+	top: 50%;
+	background-color: hsl(var(--gray-h) var(--gray-s-600) var(--gray-l-600) / 0.5);
+	width: 100%;
+	height: 1px;
+	z-index: -1;
 }
 
 .paper {
@@ -46,6 +60,8 @@
 }
 
 .rank {
+	position: relative;
+
 	composes: paper;
 	flex-direction: column;
 	justify-content: space-between;
