--- a/src/lib/components/number/style.module.css
+++ b/src/lib/components/number/style.module.css
@@ -85,9 +85,9 @@
 	min-width: 2ch;
 }
 
-.rank button:focus,
+.rank button:focus-visible,
 .rank button:not(:disabled):hover {
-	outline: 1px solid var(--color-primary);
+	outline: 1px solid var(--color-accent);
 }
 
 .rank output {
