--- a/src/lib/components/number/style.module.css
+++ b/src/lib/components/number/style.module.css
@@ -1,55 +1,4 @@
-.numbers {
-	display: grid;
-	gap: var(--space-m);
-	place-content: center;
-	place-items: center;
-}
-
-.numbers > li {
-	list-style: none;
-
-	max-width: 100%;
-	display: flex;
-	overflow-x: auto;
-	scroll-snap-type: x mandatory;
-	justify-self: end;
-}
-
-.numbers li > div {
-	height: auto;
-	padding: var(--space-xs) var(--space-m);
-	position: relative;
-}
-
-.number {
-	position: relative;
-}
-
-.number,
-.number > section {
-	display: flex;
-	gap: 0.5rem;
-}
-
-.number > section[label="radix"] {
-	position: sticky;
-	right: var(--space-m);
-}
-
-.number > section[label="ranks"] {
-	position: relative;
-}
-
-.number > section[label="ranks"]::after {
-	content: "";
-	position: absolute;
-	left: 0;
-	top: 50%;
-	background-color: hsl(var(--gray-h) var(--gray-s-600) var(--gray-l-600) / 0.5);
-	width: 100%;
-	height: 1px;
-	z-index: -1;
-}
+/* Reuse*/
 
 .paper {
 	display: flex;
@@ -59,9 +8,98 @@
 	padding: var(--space-s);
 }
 
-.rank {
+/* Top-level Layout */
+
+
+/* Numbers layout */
+
+.numbers {
+	display: flex;
+	flex-flow: column nowrap;
+	gap: var(--space-m);
+	max-width: 100%;
+}
+
+.number {
+	display: flex;
+	gap: var(--space-m);
+	justify-content: flex-end;
+  align-items: center;
+	max-width: 100%;
+}
+
+.ranks {
 	position: relative;
 
+	max-width: 100%;
+	display: flex;
+	overflow-x: auto;
+	scroll-snap-type: x mandatory;
+	justify-self: end;
+}
+
+.ranks::before,
+.ranks::after {
+	--direction: 90deg;
+
+	content: "";
+
+	position: sticky;
+	top: 0;
+	padding: 0 var(--space-s);
+	height: auto;
+	background-image: linear-gradient(var(--direction), var(--color-surface-400), rgb(0 0 0 / 0.0001));
+	pointer-events: none;
+
+	z-index: 2;
+}
+
+.ranks::before {
+	left: 0;
+}
+
+.ranks::after {
+	--direction: 270deg;
+	right: 0;
+}
+
+@media screen and (min-width: 500px) and (pointer: fine) {
+	.ranks::-webkit-scrollbar-track {
+		background-color: var(--color-surface-300);
+	}
+	
+	.ranks::-webkit-scrollbar {
+		height: 7.5px;
+	}
+	
+	.ranks::-webkit-scrollbar-thumb {
+		background-color: var(--color-surface-500);
+	}
+}
+
+.number ol {
+	position: relative;
+
+	display: flex;
+	gap: var(--space-s);
+	height: 100%;
+	padding: var(--space-xs) var(--space-m);
+	padding-right: 0;
+	scrollbar-gutter: stable;
+}
+
+.number ol::before {
+	content: "";
+	position: absolute;
+	left: calc(2 * var(--space-m) + var(--space-s));
+	top: 50%;
+	background-color: hsl(var(--gray-h) var(--gray-s-600) var(--gray-l-600) / 0.5);
+	width: calc(100% - 4 * var(--space-m) - 2 * var(--space-s));
+	height: 1px;
+	z-index: -1;
+}
+
+.rank {
 	composes: paper;
 	flex-direction: column;
 	justify-content: space-between;
@@ -70,10 +108,6 @@
 
 	transition: transform 0.25s;
 	scroll-snap-align: center;
-}
-
-.rank:active {
-	transform: scale(0.85);
 }
 
 .rank button {
@@ -97,12 +131,15 @@
 	pointer-events: none;
 }
 
+/* Increment ranks */
+
 .controls {
 	--opacity-bg: 0.25;
 	--opacity-border: 0.5;
 
 	composes: paper;
 	place-items: center;
+	place-self: center;
 	border: solid 1px hsl(var(--gray-h) var(--gray-s-600) var(--gray-l-600) / var(--opacity-border));
 	background-color: hsl(var(--surface-h) var(--surface-s-500) var(--surface-l-500) / var(--opacity-bg));
 	cursor: pointer;
@@ -127,13 +164,34 @@
 	color: var(--color-gray-800);
 }
 
+/* Radix indicator */
+
+.number section[label="radix"] {
+	position: relative;
+}
+
 .radix {
 	composes: paper;
 
-	place-items: center;
 	place-content: center;
+	place-self: center;
 	background-color: var(--color-surface-300);
 	font-size: var(--font-size-5);
 	color: var(--color-gray-800);		
 	width: 2em;
+	height: 2em;
+	aspect-ratio: 1 / 1;
+}
+
+.number:not(:last-child) .radix::after {
+	font-size: inherit;
+	content: "";
+	position: absolute;
+	left: 50%;
+	top: 0;
+	background-color: hsl(var(--gray-h) var(--gray-s-600) var(--gray-l-600) / 0.5);
+	width: 1px;
+	/* grow till the bottom of the next `Radix`, allows to have some extra length to accomodate to scroll shifts */
+	height: calc(2 * 100% + 2em + var(--space-l));
+	z-index: -1;
 }
